fix so caret and label for column dont overlap

--- a/src/scss/tabulator.scss
+++ b/src/scss/tabulator.scss
@@ -1125,7 +1125,7 @@ $footerActiveColor:#d00 !default; //footer bottom active text color
 			}
 
 			.tabulator-col-content{
-				.tabulator-arrow{
+				.tabulator-col-sorter{
 					left:8px;
 					right:initial;
 				}
